refactor: setData function calling

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     tools:context="com.example.circlechart.MainActivity">
 
     <com.example.circlechart.CircleChart
+        android:id="@+id/chart"
         android:layout_width="300dp"
         android:layout_height="300dp" />
 
