--- a/circle_chart/src/main/res/layout/circle_chart.xml
+++ b/circle_chart/src/main/res/layout/circle_chart.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <com.example.circlechart.Circle
+    <com.kevinguitar.circlechart.Circle
         android:id="@+id/circle"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
